Setup and layout for part 3

--- a/AlphaPic/app/src/main/res/layout/activity_history.xml
+++ b/AlphaPic/app/src/main/res/layout/activity_history.xml
@@ -4,5 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/box_inset_layout_padding"
-    tools:context=".HistoryActivity"/>
+    android:layout_margin="10dp"
+    android:orientation="vertical"
+    tools:context=".HistoryActivity">
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/barChart"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" />
+
+</LinearLayout>
